# OpenGL_Simple_C_GUI

./: .gitignore  CMakeLists.txt  Readme.md  oscguiConfig.cmake.in
examples/: demo.c
font/: font.fnt
include/: oscgui_app.h  oscgui_components.h  oscgui_gui.h  oscgui_types.h
include/glad/: gl.h
include/oscgui/: api.h  oscgui_components.h  oscgui_gui.h  oscgui_types.h  text.h
oscgui_example/: CMakeLists.txt  main.c
shader/: frag.frag  vert.vert
src/: Text.cpp  Text.h  app.cpp  app.h  based.cpp  based.h  components.cpp  components.h  gui.cpp  gui.h  main.cpp  oscgui_components.cpp  oscgui_gui.cpp  renderer.cpp  renderer.h  types.cpp  types.h
